add_subdirectory(hello_world)
add_subdirectory(hello_server)
add_subdirectory(hello_client)
#add_subdirectory(hello_state)
add_subdirectory(hello_publisher)
add_subdirectory(hello_subscriber)
add_subdirectory(learning_publisher)
add_subdirectory(learning_subscriber)
add_subdirectory(learning_server)
add_subdirectory(learning_client)
add_subdirectory(logger_imu)
add_subdirectory(logger_odom)
#add_subdirectory(logger_cam)
add_subdirectory(position_estimator)